
2025-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_sig_handler) [!HAVE_SIGNAL_H]: fix compile error as
	  now "supported" again (with missing cleanup on signal)

2025-05-19  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (set_compile_date): fix SOURCE_DATE_EPOCH being
	  ignored on subsequent invocations

2025-04-04  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (process_filename): ensure we don't keep the preprocessed
	  file when using -M or -fcopybook-deps
	* cobc.c, cobc.h, help.c, pplex.l: make -fcopybook-deps an experimental
	  feature, activable with the EXPERIMENTAL_COPYBOOK_DEPS_OPTION flag

2025-03-26  David Declerck <david.declerck@ocamlpro.com>

	* gentable.c: generate EBCDIC/ASCII translation tables
	* cobc.c, help.c: new --gentable option

2025-01-13  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: handle [__xlc__] identical to [__IBMC__]

2024-12-09  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (cobc.1): add description using help2man -n

2024-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line): fix leak for --copy and -include parsing

2024-10-30  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* typeck.c: define [WITH_EXTENDED_SCREENIO] for any curses headers
	  available, which now includes panel.h definitions

2024-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (output_line_directive): extracted from other places and
	  extended to output compile from stdin as <stdin>
	* codegen.c (output_cobol_info): output compile from stdin as <stdin>
	* cobc.c (cobc_print_version, cobc_print_shortversion,
	  process_command_line): build and package data only shown in verbose mode
	  which does not output the verbose "process" calls by default;
	  PACKAGE_NAME may now be overwritten by PKGVERSION (new configure option)
	* help.c (cobc_print_usage): handle PACKAGE_BUGREPORT_URL as
	  alternative to mailing list, now resolved by PACKAGE_BUGREPORT