@@ -1108,7 +1108,7 @@ AT_DATA([prog2.cob], [
 AT_DATA([filec.c], [
 /* for COB_EXT_EXPORT */
 #include <libcob.h>
-COB_EXT_EXPORT void f (char *str, long num) {};
+COB_EXT_EXPORT void f (char *str, long num);
 ])
 AT_CHECK([$COMPILE_MODULE --save-temps filec.c -o libfilec.$COB_MODULE_EXT], [0], [], [])
 # cater for environments that do not use a lib prefix
