@@ -1,4 +1,9 @@
 
+2025-07-15  Simon Sobisch <simonsobisch@gnu.org>
+
+	* cobc.h, tree.h, replace.c, scanner.l: fixed enum and forward definitions
+	  for C89 compat
+
 2025-06-02  Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (cobc_sig_handler) [!HAVE_SIGNAL_H]: fix compile error as
